# squid-ecap-av

./: .gitignore  CHANGES  CMakeLists.txt  NOTICE  README  README.asciidoc  doc.conf  doc.css
src/: CMakeLists.txt  adapter_avscan.cc  adapter_avscan.h  adapter_avscan_Logger.cc  adapter_avscan_Logger.h  adapter_avscan_Service.cc  adapter_avscan_Service.h  adapter_avscan_Xaction.h  adapter_clamd.cc  ecap_adapter_av.conf  ecap_adapter_av.skip
