CMAKE_MINIMUM_REQUIRED(VERSION 2.4)
PROJECT(squid-ecap-av CXX)

SET(PACKAGE_VERSION "1.0.1")
SET(CMAKE_CXX_FLAGS "-DPACKAGE_VERSION=\\\"${PACKAGE_VERSION}\\\"")

FIND_PROGRAM(ASCIIDOC NAMES asciidoc)
IF (ASCIIDOC)
  ADD_CUSTOM_TARGET(html ${ASCIIDOC} -d book -v
    -f ${PROJECT_SOURCE_DIR}/doc.conf
    -a stylesheet=${PROJECT_SOURCE_DIR}/doc.css
    -o index.html ${PROJECT_SOURCE_DIR}/README)
ENDIF()

SET(CPACK_RESOURCE_FILE_LICENSE ${CMAKE_CURRENT_SOURCE_DIR}/LICENSE.txt)
SET(CPACK_SOURCE_PACKAGE_FILE_NAME "squid-ecap-av-${PACKAGE_VERSION}")
SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Securepoint eCAP antivirus adapter")
SET(CPACK_SOURCE_GENERATOR "TBZ2")
SET(CPACK_SOURCE_IGNORE_FILES "/\\.git/;\\.swp$;~$;\\.#;/#")
INCLUDE(CPack)

add_subdirectory(src)
