CMAKE_MINIMUM_REQUIRED(VERSION 2.4)
PROJECT(squid-ecap-av CXX)

SET(PACKAGE_VERSION "1.0.8")
SET(CMAKE_CXX_FLAGS "-W -Wall -DPACKAGE_VERSION=\\\"${PACKAGE_VERSION}\\\"")
SET(MODDIR "${CMAKE_INSTALL_PREFIX}/libexec/squid/" CACHE PATH "Directory to install the eCAP adapater to.")
SET(DOCDIR "${CMAKE_INSTALL_PREFIX}/share/doc/squid-ecap-av-${PACKAGE_VERSION}" CACHE PATH "Directory to install the documentation to.")

FIND_PROGRAM(ASCIIDOC NAMES asciidoc)
IF (ASCIIDOC)
  ADD_CUSTOM_TARGET(html ${ASCIIDOC} -d book -v
    -f ${PROJECT_SOURCE_DIR}/doc.conf
    -a stylesheet=${PROJECT_SOURCE_DIR}/doc.css
    -o index.html ${PROJECT_SOURCE_DIR}/README)
ENDIF()

SET(CPACK_RESOURCE_FILE_LICENSE ${CMAKE_CURRENT_SOURCE_DIR}/LICENSE.txt)
SET(CPACK_SOURCE_PACKAGE_FILE_NAME "squid-ecap-av-${PACKAGE_VERSION}")
SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Securepoint eCAP antivirus adapter")
SET(CPACK_SOURCE_GENERATOR "TBZ2")
SET(CPACK_SOURCE_IGNORE_FILES "/.git/;tags;.swp$;~$;.#;/#;${CPACK_SOURCE_IGNORE_FILES}")
INCLUDE(CPack)

install(FILES CHANGES LICENSE-eCAP LICENSE.txt NOTICE README.asciidoc DESTINATION ${DOCDIR})

add_subdirectory(src)
